--- a/Java proyecto usuario/web/admin_add.html
+++ b/Java proyecto usuario/web/admin_add.html
@@ -6,7 +6,7 @@
   <title>Admin - Agregar Usuario</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="container admin-panel">
     <div class="login-box" style="width:880px; max-width:95%;">
       <h2>Agregar usuario</h2>
@@ -30,7 +30,6 @@
       </form>
     </div>
   </div>
-    <script src="admin.js"></script>
-    <script src="animated-bg.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
