--- a/Java proyecto usuario/web/admin_manage.html
+++ b/Java proyecto usuario/web/admin_manage.html
@@ -6,7 +6,7 @@
   <title>Admin - Gestionar Usuarios</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="container admin-panel">
     <div class="login-box" style="width:880px; max-width:95%;">
       <h2>Panel Admin — Gestionar usuarios</h2>
@@ -33,6 +33,5 @@
     </div>
   </div>
   <script src="admin.js"></script>
-   <script src="animated-bg.js"></script>
 </body>
 </html>
