--- a/Java proyecto usuario/web/confirmation.html
+++ b/Java proyecto usuario/web/confirmation.html
@@ -14,7 +14,7 @@
     .small-btn{background:#111;color:#ddd;padding:8px 12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);cursor:pointer;margin-top:18px;display:inline-flex;align-items:center;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;min-height:34px}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="wrap">
     <div class="box">
       <div id="heading" class="ok">Confirmación</div>
