--- a/Java proyecto usuario/web/dashboard.html
+++ b/Java proyecto usuario/web/dashboard.html
@@ -42,7 +42,7 @@
     #aiResponses{min-height:260px;max-height:56vh;overflow:auto;padding:12px;background:#0d0d0e;border:1px solid rgba(255,255,255,0.03);border-radius:8px}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="dashboard">
     <div style="text-align:center; width:100%">
       <div style="position:relative;margin-bottom:6px">
@@ -155,7 +155,5 @@
       </form>
     </div>
   </div>
-</div>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
