--- a/Java proyecto usuario/web/index.html
+++ b/Java proyecto usuario/web/index.html
@@ -12,7 +12,7 @@
     .card{ background: transparent !important; box-shadow: none !important; }
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="container">
     <!-- Styled login/register box with animated spans -->
     <div class="login-box" id="loginView">
@@ -139,6 +139,5 @@
   </div>
   
   <script src="app.js"></script>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
