--- a/Java proyecto usuario/web/payment.html
+++ b/Java proyecto usuario/web/payment.html
@@ -25,7 +25,7 @@
     .error{color:#ff7b7b;margin-top:6px}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="wrap">
     <h2 class="title">Pasarela de pago</h2>
     <div class="card">
@@ -62,6 +62,5 @@
     </div>
   </div>
   <script src="payment.js"></script>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
