--- a/Java proyecto usuario/web/profile.html
+++ b/Java proyecto usuario/web/profile.html
@@ -18,7 +18,7 @@
     .plan-badge{background:rgba(14,239,255,0.06);color:#0ef;padding:6px 10px;border-radius:999px;font-weight:600}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div class="wrap">
     <div style="display:flex;justify-content:flex-end;margin-bottom:8px"><button id="backBtn" class="small-btn">Volver</button></div>
     <h2 class="title">Mi perfil</h2>
@@ -68,6 +68,5 @@
     </div>
   </div>
   <script src="profile.js"></script>
-    <script src="animated-bg.js"></script>
 </body>
 </html>
