--- a/Java proyecto usuario/web/rector.html
+++ b/Java proyecto usuario/web/rector.html
@@ -20,7 +20,7 @@
     button{cursor:pointer}
   </style>
 </head>
-  <body class="animated-bg">
+  <body style="background:#121212">
   <header style="padding:12px;border-bottom:1px solid #eee"><h2 id="aiTitle">IA para Rectores</h2></header>
   <main class="container">
     <section class="chat-panel">
@@ -43,6 +43,5 @@
     </aside>
   </main>
   <script src="rector.js"></script>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
