--- a/Java proyecto usuario/web/startup.html
+++ b/Java proyecto usuario/web/startup.html
@@ -6,8 +6,8 @@
         <title>Starting…</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="animated-bg">
-        <div style="display:flex;align-items:center;justify-content:center;min-height:100vh;">
+    <body>
+        <div style="display:flex;align-items:center;justify-content:center;min-height:100vh;background:#121212;">
             <div id="startupLoader" class="loader-wrapper" aria-hidden="false">
                 <span class="loader-letter">G</span>
                 <span class="loader-letter">e</span>
@@ -45,6 +45,5 @@
                 } catch (e) { go(); }
             });
         </script>
-        <script src="animated-bg.js"></script>
     </body>
 </html>
