--- a/Java proyecto usuario/web/ai.html
+++ b/Java proyecto usuario/web/ai.html
@@ -43,7 +43,7 @@
     #responses{min-height:260px;max-height:56vh;overflow:auto;padding:12px;background:#0d0d0e;border:1px solid rgba(255,255,255,0.03);border-radius:8px}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div id="userArea">
     <button id="userIcon" title="Cuenta">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 12c2.761 0 5-2.239 5-5s-2.239-5-5-5-5 2.239-5 5 2.239 5 5 5zM4 22c0-4 4-7 8-7s8 3 8 7v1H4v-1z" fill="#001"></path></svg>
@@ -137,6 +137,5 @@
   </div>
 
   <script src="ai.js"></script>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
