--- a/Java proyecto usuario/web/menu.html
+++ b/Java proyecto usuario/web/menu.html
@@ -17,7 +17,7 @@
     .small-btn{background:#111;color:#ddd;padding:8px 12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);cursor:pointer;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;min-height:36px;display:inline-flex;align-items:center}
   </style>
 </head>
-<body class="animated-bg">
+<body style="background:#121212">
   <div id="userArea">
     <button id="userIcon" title="Cuenta">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 12c2.761 0 5-2.239 5-5s-2.239-5-5-5-5 2.239-5 5 2.239 5 5 5zM4 22c0-4 4-7 8-7s8 3 8 7v1H4v-1z" fill="#001"></path></svg>
@@ -38,6 +38,5 @@
   </div>
 
   <script src="menu.js"></script>
-  <script src="animated-bg.js"></script>
 </body>
 </html>
